[package]
name = "compute_average_income"
version = "0.1.0"
authors = ["Torsten Fink <torsten.fink@akquinet.de>"]
edition = "2018"

[dependencies]

fastrand = "1.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.rand]
version = "0.8.4"
features = ["small_rng"]

